--- a/index.html
+++ b/index.html
@@ -85,10 +85,26 @@
                 left: 1600px;
             }
             
-            
+            footer {
+                font-weight: 300;
+                display: flex;
+                padding: 3rem;
+                border-top: 4px gray;
+                word-spacing: 10px;
+            } 
 
+            #abajo{
+                top: 500px;
+            }
 
+            #m{
+                bottom: 20px;
+            }
 
+            #nav-lsit2{
+                right: inherit;
+                right: 100px;
+            }
         </style> 
     </head>
 
@@ -120,8 +136,9 @@
             </ul>   
         </div>
      </section>   
+
     <footer id="abajo">
-        <p>Mexico</p>
+        <a id="m">Mexico</a>
         <ul class="nav-list2">
             <li>
               <a>Sobre google</a>
@@ -132,9 +149,7 @@
         </ul>
         <ul class="nav-list3">
             <li>
-              <a>Privacidad</a>
-              <a>Condiciones</a>
-              <a>Preferencias</a>
+              <a>Privacidad Condiciones Preferencias</a>
             </li>
         </ul>
     </footer> 
